--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,7 +18,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup Swift
       uses: swift-actions/setup-swift@v2.3.0
+      with:
+        swift-version: 6.0.0
     - name: Build
-      run: swift build -v
+      run: swift build
     - name: Run tests
-      run: swift test -v
+      run: swift test
