--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,15 +11,17 @@ on:
 
 jobs:
   build:
-
     runs-on: macos-latest
+    strategy:
+      matrix:
+        swift-version: ['6.0.0', '5.10.0']
 
     steps:
     - uses: actions/checkout@v4
     - name: Setup Swift
       uses: swift-actions/setup-swift@v2.3.0
       with:
-        swift-version: 6.0.0
+        swift-version: ${{ matrix.swift-version }}
     - name: Build
       run: swift build
     - name: Run tests
