--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        swift-version: ['6.0.0', '5.10.0']
+        swift-version: ['6.0'] # we will support 5.10 for a while
 
     steps:
     - uses: actions/checkout@v4
